s00e04.txt
a)
s00e04_a.c:4:15: error: expected ';', ',' or ')' before '{' token
    4 | int main(void {
      |               ^



b)
s00e04_b.c: In function 'main':
s00e04_b.c:5:27: error: expected ')' before ';' token
    5 |     printf("Hello World\n";
      |                           ^
      |                           )
s00e04_b.c:6:25: error: expected ';' before '}' token
    6 |     return EXIT_SUCCESS;
      |                         ^
      |                         ;
    7 | }
      | ~

Notwendige Schritte:
